test/algeff/wrong/ops2.kk.out
[01;30moperator branch (amb_handle) flip: resume scoped
[00;39;49m[00m[01;30moperator branch (state_handle) get: resume tail
[00;39;49m[00mtest/algeff/wrong/ops2.kk(47, 5): error: constructor has too many arguments
 context : set
 term : set
 inferred type: (i : int) -> .op-set